2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageFault.cs : MessageFault from Message could have empty
	  detail. Have it return HasDetail as expected.

2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* SecurityRequestChannel.cs : do not try to decrypt faults, they
	  are not encrypted.

2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeader.cs : to clone raw xml completely, avoid using 
	  ReadOuterXml() and text reader but use XmlNodeReader instaed.
	* Message.cs : avoid extraneous xmlns:u attribute.

2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeader.cs, MessageHeaderInfo.cs: add internal Prefix
	  property and copy them from source to destination.

2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageImpl.cs : When XmlReaderMessage was writing its contents,
	  it was dropping body attributes, including wsu:Id for WS-Security.

2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* SecureMessageGenerator.cs : MessageBuffer was missing copy of
	  Body wsu:Id attribute.
	* HttpRequestChannel.cs : remove comment for resolved issue.

2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : move another old code.

2010-07-08  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestChannel.cs : remove extra code.

2010-07-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReaderBodyWriter.cs, MessageFault.cs: warning cleanups.

2010-07-06  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelFactoryBase.cs : null via uri parameter is not allowed.

2010-07-05  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpTransportbindingElement.cs : remove "Standalone".

2010-07-05  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs : removed old code and #if blocks.

2010-07-05  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs : add required code for new ASP.NET HTTP stack.
	  Support for new and old stack (both) are temporarily enabled.